--- a/index.html
+++ b/index.html
@@ -189,10 +189,11 @@
 			<a> <i class="fas fa-tasks"></i> <em><b> responsibilities</b> </em></a>
 			<ul>
 			  <li>Research, evaluate, recommend, and implement technical solutions</li>
+			  <li>Use Characterization test to understand the behavior of the classic ASP web application and create documentation for the new project.</li>
 			  <li>Designed and implemented Auth Gateway for authentication by scaffolding ASP.Net identity.</li>
 			  <li>Elaborate the Coding Standards and Best Programming Practices for the team.</li>
-			  <li>Designed and implemented the model(user, domain, department...) including the hierarchyId type and fluent validation.</li>
-			  <li>Create the initial database instance using EF code first  and write consistent LINQ query to access SQL Server database.</li>
+			  <li>Designed and implemented the different model including the hierarchyId type and fluent validation.</li>
+			  <li>Create the new database instance using EF code first  and write consistent LINQ query to access SQL Server database.</li>
 			  <li>Implement RESTful ASP.NET Web APIs using HttpClient and Ajax to communicate with database.</li>
 			  <li> Tested the API with Postman and ensure that data is presented in JSON format</li> 
 			  <li>Managed database structure using Fluid API and data formatting with Data Annotations including Regex.  </li>
@@ -202,6 +203,7 @@
 			  <li>Setup and implemented azure service bus (topic and queue) for asynchronous transfer of data and state between our different services. </li>	
 			  <li>Design and implemented the repository pattern. </li>
 			  <li>Override the OnModelCreating method and use the ModelBuilder API to configure our model.  </li>
+			  <li>Setup and implemented Redis database for in-memory cache. </li>
 			</ul>
 			<a> <i class="fas fa-project-diagram"></i> <em><b> Projects</b> </em></a>
 			<ul>
@@ -423,23 +425,49 @@
 and perform different actions depending on his Role and Department such as (Sales Associate, 
 General/District/Division Manager for Sales Department, Office Employee for HR Department, Dispatch, 
 Lift Operator for Wharehouse, Store Pricing for Accounting…), and his Domain (Company, Sales 
-Division/District, Distribution Center, Profit Center, Operation Center…). The application is mainly 
-based on HierarchyId in SQL Server.</label>  </legend>
+Division/District, Distribution Center, Profit Center, Operation Center…). With the application managers can track inventories and employee invoices (to set their bonus).</label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net EF Core, SQL Server, JWT, Angular 8, TypeScript, Lazy Loading, Kafka, Docker, CI/CD with Azure Devops, SQL HierarchyId, API Gateway, RestFul API, Git, JSON... </label> </legend>
 			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <label class="textsmall" href=""> View on github (Private)</label> </legend>
 			</div>
+			
 			<div class="form-style-5">
 			<h3 class="mb-0" id="abank">A-Bank</h3>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> A web-based banking application, where a user can register as a customer and then open accounts with the bank and perform transactions for his/her accounts. It also simulates some ATM operations. A-Bank  is a banking application for anyone to use that also has management views for customers and employees. Login to view transactions, credit card information, and account information, as well as creating new transactions, credit cards, and accounts. Managers need to approve new accounts and credit cards, and they also have the ability to freeze and unfreeze any account. Customers can deposit, withdraw and manage accounts such as checking, savings and loans.</label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net EF Core, SQL Server, JWT, Angular 8, TypeScript, RestFul API & web-services, CSS/HTML/Javascript/JQuery</label> </legend>
 			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <label class="textsmall" href=""> View on github (Private)</label> </legend>
 			</div>
+			
 			<div class="form-style-5">
 			<h3 class="mb-0" id="pizzaparlor">piZZZa-Parlor</h3>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall">piZZZa-Parlor is a 24-hour pizza ordering and delivery service application. Order one of our specialty made pizzas, make-your-own pizza with a variety of ingredients or indulge in a footlong churro. Be sure to check out our other sides, desserts, sauces, and drinks when creating your order. This application not only makes the process of ordering food online easier, but from anywhere at anytime.</label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net EF Core, SQL Server, ASP.NET MVC, Postman, RestFul API... </label> </legend>
 			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="https://github.com/nod-codeman/VmanPizza-Angular" target="blank"> View on github </a> </legend>
 			</div>
+			
+			<div class="form-style-5">
+			<h3 class="mb-0" id="abank">E-Commerce Store</h3>
+			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Online store build with Angular 9 and .Net Core 3.1. This web application have two interfaces: One <b>Admin panel</b> where the seller can add/edit/delete a product based on hierarchy category, manage and analyse importants data (monthly/yearly sales, totals orders, refunds, customers, profits, tax,...)
+				provides support to customers and so on, and the ecommerce interface where users can navigate throught thousands of products of multiples hierarchy categories and orders products of their choice or just save it inside cart or wish list. They can also search product by keyword, manage their orders, 
+				view products details and so on... 
+			  </label>  </legend>
+			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> .Net Core, Angular 9, C# Generics and Collections, Automapper
+				Bootstrap,
+				ASP .NET Identity for Login and Registration,
+				Repository and Unit of Work  and Specification Pattern,
+				Caching(Redis and Angular caching),
+				Angular Lazy loading,
+				Angular Routing,
+				Angular Reactive Forms,
+				Angular Creating a MultiStep form wizard,
+				Accepting payments using Stripe,
+				Angular Re-usable form components,
+				Angular validation and async validation,
+				Paging, Sorting, Searching and Filtering,
+				Payments service via Stripe using the new EU standards for 3D secure.</label>
+			</legend>
+			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <label class="textsmall" href=""> View on github (Private)</label> </legend>
+			</div>
+			
 			<div class="form-style-5">
 			<h3 class="mb-0" id="baremax">Baremax</h3>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall">BareMax is a private software for Gauging and Tank-Strapping based on a volumetric approach.
@@ -449,6 +477,7 @@ based on HierarchyId in SQL Server.</label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> Java, SQL, MySQL, Enterprise Architect, PowerAMC, WinDesign,  NetBeans. </label> </legend>
 			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="doc/BareMaxOverview.pdf" target="blank">View Demo</a> </legend>
 			</div>
+			
 			<div class="form-style-5">
 			<h3 class="mb-0" id="aaffix">Blind-Love</h3> <span style="color: red">Still Under Development</span>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Dating application to connect people according to their interests, locations (No pictures). User can login/register, choose an avatar, like other users to add them as contact, chat with their contacts and so on...  </label>  </legend>
@@ -457,9 +486,10 @@ based on HierarchyId in SQL Server.</label>  </legend>
 			  Angular 3rd party components and advanced notions(AlertifyJS, Angular JWT, NGX Boostrap, Bootswatch, ngx-gallery, ng2-file-upload, time-ago-pipe, auth0/angular-jwt, resolver, route guard, services, observable/subscribe), JWT, Token authentication, C# extentions and advanced notions (Automapper, Fluent API, JSON generator, CORS, Repository pattern, Paging, Filtering and Sorting, Action Filter), Cloudinary, Lazy Loading, Reactive form, publishing in Azure, ... </label> </legend>
 			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="https://blind-love.azurewebsites.net/" target="blank"> Open on azure devops </a> </legend>
 			  <legend class="mydefinition"><i class="fab fa-github"></i><a class="textsmall" href="https://github.com/Ektiva/MyDate" target="blank"> View on github </a> </legend>
-			  <a class="textsmall"> <i class="fas fa-highlighter"></i>  This is a personal project build from scratch by me in order to first master Angular and .Net Core Entity Framework, then to help singles around the world. </a> 
-			  <p class="textsmall"> <i class="fas fa-highlighter"></i>  To test you can open the azure link above and register or login as <b>- Username: Ektiva, Password: Pa$$w0rd </b> </p> 
+			  <!--<a class="textsmall"> <i class="fas fa-highlighter"></i>  This is a personal project build from scratch by me in order to first master Angular and .Net Core Entity Framework, then to help singles around the world. </a> 
+			  <p class="textsmall"> <i class="fas fa-highlighter"></i>  To test you can open the azure link above and register or login as <b>- Username: Ektiva, Password: Pa$$w0rd </b> </p> -->
 			</div>
+			
 			<div class="form-style-5">
 			<h3 class="mb-0" id="saafi">SAAFI</h3>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Web based application to connect landlord and roomate. This project is a personal and non profit project I've build to help my community and all other immigrant avoid the issue I faced 2 years ago as a new immigrant. </label>  </legend>
