--- a/index.html
+++ b/index.html
@@ -453,13 +453,12 @@ Division/District, Distribution Center, Profit Center, Operation Center…). Wit
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> .Net Core, Angular 9, C# Generics and Collections, Automapper
 				Bootstrap,
 				ASP .NET Identity for Login and Registration,
-				Repository and Unit of Work  and Specification Pattern,
+				Repository, Unit of Work  and Specification Pattern,
 				Caching(Redis and Angular caching),
 				Angular Lazy loading,
 				Angular Routing,
 				Angular Reactive Forms,
 				Angular Creating a MultiStep form wizard,
-				Accepting payments using Stripe,
 				Angular Re-usable form components,
 				Angular validation and async validation,
 				Paging, Sorting, Searching and Filtering,
